radix-transactions/tests/assets/manifest_generator_error_invalid_non_fungible_global_id_1.diag
error: invalid non-fungible global id
   |
 4 | ;
 5 | CALL_FUNCTION
 6 |     Address("package_sim1p4r4955skdjq9swg8s5jguvcjvyj7tsxct87a9z6sw76cdfd2jg3zk")
 7 |     "Hello"
 8 |     "instantiate_hello"
 9 |     NonFungibleGlobalId("resource_sim1n2n538l5hpaagvl0phkff3qkdd6pxh0kskh8umuknr8c3whsl62dxp:some_id")
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid non-fungible global id
10 | ;
   |